Alarm destination filtering
